[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tropi-service-common"
version = "0.1.0"
description = "Shared service plumbing for the Tropi Railway fleet"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[tool.setuptools]
packages = ["tropi_common"]
